Fix pause checkbox width
arrizalamin/speed-reading-mode#5 Pause image checkbox in preferences is too long

--- a/popup/style.css
+++ b/popup/style.css
@@ -11,7 +11,7 @@ body {
 input {
 	line-height: 2em;
 }
-input, button {
+input[type="number"] {
 	width: 100%;
 }
 button {
